openshift/cargo-service-helm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cargo-pipeline-gitops
  name: cargo-pipeline-gitops
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: cargo-pipeline-gitops
    deployment: cargo-pipeline-gitops
  type: ClusterIP
