openshift/cargo-route-helm.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cargo-pipeline-gitops
  name: cargo-pipeline-gitops
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cargo-pipeline-gitops
    weight: 100
  wildcardPolicy: None
